fix crawproperty listing, heatmap zone service